--- a/components/Button.module.css
+++ b/components/Button.module.css
@@ -1,5 +1,7 @@
-.button {
+.button,
+:global(.dark) a.button {
   padding: 16px;
+  color: #1f1f1f;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
@@ -8,9 +10,6 @@
   border-radius: 10px;
 }
 
-:global(.dark) .button {
-  color: #1f1f1f;
-}
 :global(.light) .button {
   color: #f9f9f9;
   background-color: #505050;
