--- a/components/SearchForm.module.css
+++ b/components/SearchForm.module.css
@@ -13,9 +13,11 @@
   border-radius: 10px;
   outline: none;
 }
+
 :global(.light) .searchInput {
-  background-color: #f9f9f9;
   color: #1f1f1f;
+  background-color: #f9f9f9;
+  border: 1px solid #cfcfcf;
 }
 
 .searchButton {
@@ -25,9 +27,9 @@
   line-height: 26px;
   border: none;
   border-radius: 10px;
-  background-color: #f0f0f0;
 }
+
 :global(.light) .searchButton {
-  background-color: #383838;
-  color: #f0f0f0;
+  color: #f9f9f9;
+  background-color: #505050;
 }
