--- a/components/SizeReviewList.module.css
+++ b/components/SizeReviewList.module.css
@@ -17,14 +17,21 @@
   border: 1px solid #252525;
   border-radius: 10px;
 }
+
 :global(.light) .sizeReview {
-  background-color: #f1f1f1;
+  background-color: #f9f9f9;
+  border: 1px solid #e1e1e1;
+  border-radius: 10px;
 }
 
 .date {
   color: #b5b5b5;
   font-size: 15px;
   line-height: 22px;
+}
+
+:global(.light) .date {
+  color: #747474;
 }
 
 .profile {
@@ -43,7 +50,8 @@
   background: #121212;
   border-radius: 9999px;
 }
+
 :global(.light) .fit {
-  background-color: #cacaca;
-  color: #4b4b4b;
+  color: #1f1f1f;
+  background-color: #ededed;
 }
