--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,4 +1,5 @@
 .loading {
+  margin: 60px;
   text-align: center;
 }
 
@@ -16,22 +17,27 @@
   line-height: 26px;
 }
 
+:global(.light) .englishName {
+  color: #747474;
+}
+
 .content {
   display: flex;
+  align-items: flex-start;
   gap: 40px;
   margin: 30px 0;
 }
 
-.content > * {
+.content > div {
   flex-grow: 1;
   width: 50%;
 }
 
 .image {
   position: relative;
+  overflow: hidden;
   border-radius: 10px;
-  width: 80%;
-  aspect-ratio: 1/1;
+  aspect-ratio: 1 / 1;
 }
 
 .section + .section {
@@ -50,8 +56,11 @@
   border: 1px solid #252525;
   border-radius: 10px;
 }
+
 :global(.light) .info {
-  background-color: #f1f1f1;
+  background-color: #f9f9f9;
+  border: 1px solid #e1e1e1;
+  border-radius: 10px;
 }
 
 .infoTable {
@@ -75,6 +84,10 @@
   text-decoration: line-through;
 }
 
+:global(.light) .salePrice {
+  color: #b5b5b5;
+}
+
 .starRating {
   color: #fdc04a;
 }
@@ -91,6 +104,11 @@
   background-color: #1f1f1f;
   border: 1px solid #252525;
   border-radius: 10px;
+}
+
+:global(.light) .sizeForm {
+  background-color: #f9f9f9;
+  border: 1px solid #e1e1e1;
 }
 
 .label {
